another attempt to fix spacing issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -30,6 +30,14 @@
   box-sizing: border-box;
 }
 
+html, body {
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
+}
+
 body {
   font-family: dosis;
   font-weight: normal;
@@ -48,10 +56,6 @@ h1, h2, h3, h4, h5 {
 
 header {
   display: none;
-}
-
-.container {
-  width: 100%;
 }
 
 nav {
@@ -107,7 +111,7 @@ nav li:hover {
 .sticky {
   position: fixed;
   top: 0;
-  width: 100vw;
+  width: 100%;
 }
 
 main {
